--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@mdi/font": "^4.5.95",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.4",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mdbvue": "^5.8.3",
+    "moment": "^2.24.0",
     "serve-static": "^1.14.1",
     "sweetalert": "^2.1.2",
     "toastr": "^2.1.4",
-    "vee-validate": "^2.0.3",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.6",
+    "vue-date-pick": "^1.2.1",
     "vue-element-loading": "^1.1.1",
     "vue-inject-js": "^1.0.0",
     "vue-js-modal": "^1.3.28",
